syntax = "proto3";

option go_package= ".;service";

service SayHello {
    rpc SayHello (HelloRequest) returns (HelloResp) {}
}

message HelloRequest {
    string name = 1;
}
message HelloResp {
    string message = 1;
    int32 a = 2;
}